<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:gravity="center"
    tools:context=".MenuActivity">

    <!--<ImageView-->
        <!--android:id="@+id/appLogo"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--tools:ignore="ContentDescription" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"
        />
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TableRow
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/bird"
                tools:ignore="ContentDescription"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_point"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingLeft="20dp"
                />
        </TableRow>
        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/pinkbird"
                tools:ignore="ContentDescription"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20_point"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingLeft="20dp"
                />
        </TableRow>
        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/coin"
                tools:ignore="ContentDescription"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_30_point"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingLeft="20dp"
                />
        </TableRow>
        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/mine"
                tools:ignore="ContentDescription"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_50_point"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingLeft="20dp"
                />
        </TableRow>
        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="8dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:src="@drawable/bomb"
                tools:ignore="ContentDescription"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_over_"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingLeft="20dp"
                />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/start"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent2"
        android:layout_marginTop="20dp"
        android:onClick="startGame"
        />
    <Button
        android:id="@+id/menuExit"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:background="@color/colorRed"
        android:text="@string/exit"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent2"
        android:layout_marginTop="10dp"
        />

</LinearLayout>