<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:keepScreenOn="true"
    tools:context=".ResultActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/skull"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/colorRed"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/scoreLB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/highScoreLB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_score_999"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/btTryAgain"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/try_again"
        android:textColor="@color/colorAccent2"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:onClick="tryAgain"
        />
    <Button
        android:id="@+id/exitS"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:background="@color/colorRed"
        android:text="Exit"
        android:textColor="@color/colorAccent2"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:onClick="tryAgain"
        />

</LinearLayout>